--- a/TheNuggetList/TheNuggetList.csproj
+++ b/TheNuggetList/TheNuggetList.csproj
@@ -51,6 +51,9 @@
     <Reference Include="Microsoft.WindowsAzure.StorageClient, Version=1.7.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\WindowsAzure.Storage.1.7.0.0\lib\net35-full\Microsoft.WindowsAzure.StorageClient.dll</HintPath>
     </Reference>
+    <Reference Include="Radiator.Core, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Radiator.Core.1.1.0.0\lib\net40\Radiator.Core.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Data.Entity" />
@@ -165,6 +168,10 @@
     <Content Include="Views\Home\_viewstart.cshtml" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\TheNuggetList.Commands\TheNuggetList.Commands.csproj">
+      <Project>{6677D8FB-6104-498B-A9BF-A5A471D79F7E}</Project>
+      <Name>TheNuggetList.Commands</Name>
+    </ProjectReference>
     <ProjectReference Include="..\TheNuggetList.Data\TheNuggetList.Data.csproj">
       <Project>{5AD1C4E8-4E3C-4BFD-9464-37064DE45FA8}</Project>
       <Name>TheNuggetList.Data</Name>
