--- a/TheNuggetList/packages.config
+++ b/TheNuggetList/packages.config
@@ -12,5 +12,6 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net40" />
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="1.8.0.0" targetFramework="net40" />
   <package id="Newtonsoft.Json" version="4.5.6" targetFramework="net40" />
+  <package id="Radiator.Core" version="1.1.0.0" targetFramework="net40" />
   <package id="WindowsAzure.Storage" version="1.7.0.0" targetFramework="net40" />
 </packages>
