--- a/TheNuggetList/packages.config
+++ b/TheNuggetList/packages.config
@@ -12,5 +12,10 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net40" />
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="1.8.0.0" targetFramework="net40" />
   <package id="Newtonsoft.Json" version="4.5.6" targetFramework="net40" />
+  <package id="Ninject" version="3.0.1.10" targetFramework="net40" />
+  <package id="ninject.extensions.conventions" version="3.0.0.11" targetFramework="net40" />
+  <package id="Ninject.MVC3" version="3.0.0.6" targetFramework="net40" />
+  <package id="Ninject.Web.Common" version="3.0.0.7" targetFramework="net40" />
+  <package id="WebActivator" version="1.5.3" targetFramework="net40" />
   <package id="WindowsAzure.Storage" version="1.7.0.0" targetFramework="net40" />
 </packages>
