--- a/TheNuggetList/Web.config
+++ b/TheNuggetList/Web.config
@@ -16,6 +16,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
+    <customErrors mode="Off"/>
     <compilation debug="true" targetFramework="4.0" />
     <pages>
       <namespaces>
