--- a/TheNuggetList.Data/TheNuggetList.Data.csproj
+++ b/TheNuggetList.Data/TheNuggetList.Data.csproj
@@ -47,6 +47,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Migrations\201302031427307_AddedMember.cs" />
+    <Compile Include="Migrations\201302031427307_AddedMember.Designer.cs">
+      <DependentUpon>201302031427307_AddedMember.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="NuggetDbContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -59,6 +63,11 @@
       <Project>{9B5E8631-26CA-474C-87D5-CB10A92D6E6A}</Project>
       <Name>TheNuggetList.Domain</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201302031427307_AddedMember.resx">
+      <DependentUpon>201302031427307_AddedMember.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
