--- a/TheNuggetList.Commands.Tests/TheNuggetList.Commands.Tests.csproj
+++ b/TheNuggetList.Commands.Tests/TheNuggetList.Commands.Tests.csproj
@@ -5,13 +5,15 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{6677D8FB-6104-498B-A9BF-A5A471D79F7E}</ProjectGuid>
+    <ProjectGuid>{CF4406D7-0838-4133-9A6D-C3108A3A8690}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>TheNuggetList.Commands</RootNamespace>
-    <AssemblyName>TheNuggetList.Commands</AssemblyName>
+    <RootNamespace>TheNuggetList.Commands.Tests</RootNamespace>
+    <AssemblyName>TheNuggetList.Commands.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
+    <RestorePackages>true</RestorePackages>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -31,6 +33,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="nunit.framework, Version=2.6.2.12296, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\NUnit.2.6.2\lib\nunit.framework.dll</HintPath>
+    </Reference>
     <Reference Include="Radiator.Core">
       <HintPath>..\packages\Radiator.Core.1.1.0.0\lib\net40\Radiator.Core.dll</HintPath>
     </Reference>
@@ -43,17 +49,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BaseValidator.cs" />
-    <Compile Include="Nuggets\CreateNuggetCommand.cs" />
-    <Compile Include="Nuggets\Executors\CreateNuggetExecutor.cs" />
-    <Compile Include="Nuggets\Validators\CreateNuggetValidator.cs" />
+    <Compile Include="Nuggets\CreateNuggetValidatorTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\TheNuggetList.Commands\TheNuggetList.Commands.csproj">
+      <Project>{6677D8FB-6104-498B-A9BF-A5A471D79F7E}</Project>
+      <Name>TheNuggetList.Commands</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
