--- a/TheNuggetList/TheNuggetList.csproj
+++ b/TheNuggetList/TheNuggetList.csproj
@@ -146,6 +146,7 @@
   <ItemGroup>
     <Compile Include="App_Start\NinjectWebCommon.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\MembersController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
