--- a/TheNuggetList/TheNuggetList.csproj
+++ b/TheNuggetList/TheNuggetList.csproj
@@ -158,6 +158,8 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Content Include="Content\Css\bootstrap.css" />
+    <Content Include="Content\Css\styles.css" />
     <Content Include="Content\Images\bg\absurdidad.png" />
     <Content Include="Content\Images\bg\absurdidad_%402X.png" />
     <Content Include="Content\Images\bg\header-fade.png" />
@@ -185,7 +187,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Content\Css\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
