--- a/TheNuggetList/TheNuggetList.csproj
+++ b/TheNuggetList/TheNuggetList.csproj
@@ -153,6 +153,7 @@
     <Compile Include="NinjectModules\CommandingModule.cs" />
     <Compile Include="NinjectModules\DataModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Util\DateTimeFormater.cs" />
     <Compile Include="ViewModels\HomeNuggetListItemViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
