--- a/TheNuggetList/Web.config
+++ b/TheNuggetList/Web.config
@@ -28,7 +28,8 @@
 				<add namespace="System.Web.Mvc.Ajax" />
 				<add namespace="System.Web.Mvc.Html" />
 				<add namespace="System.Web.Routing" />
-				<add namespace="TheNuggetList.ViewModels"/>
+        <add namespace="TheNuggetList.ViewModels"/>
+        <add namespace="TheNuggetList.Util"/>
 			</namespaces>
 		</pages>
 	</system.web.webPages.razor>
