--- a/TheNuggetList/TheNuggetList.csproj
+++ b/TheNuggetList/TheNuggetList.csproj
@@ -155,6 +155,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Util\DateTimeFormater.cs" />
     <Compile Include="ViewModels\HomeNuggetListItemViewModel.cs" />
+    <Compile Include="ViewModels\HomeViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\FilterConfig.cs" />
