--- a/TheNuggetList/TheNuggetList.Website.csproj
+++ b/TheNuggetList/TheNuggetList.Website.csproj
@@ -11,8 +11,8 @@
     <ProjectTypeGuids>{E3E379DF-F4C6-4180-9B81-6769533ABE47};{349c5851-65df-11da-9384-00065b846f21};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>TheNuggetList</RootNamespace>
-    <AssemblyName>TheNuggetList</AssemblyName>
+    <RootNamespace>TheNuggetList.Website</RootNamespace>
+    <AssemblyName>TheNuggetList.Website</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <MvcBuildViews>false</MvcBuildViews>
     <UseIISExpress>false</UseIISExpress>
@@ -150,7 +150,10 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Infrastructure\Membership\AuthenticationService.cs" />
+    <Compile Include="Infrastructure\Membership\IAuthenticationService.cs" />
     <Compile Include="NinjectModules\CommandingModule.cs" />
+    <Compile Include="NinjectModules\WebsiteModule.cs" />
     <Compile Include="NinjectModules\DataModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Util\DateTimeFormater.cs" />
