--- a/TheNuggetList.Commands/TheNuggetList.Commands.csproj
+++ b/TheNuggetList.Commands/TheNuggetList.Commands.csproj
@@ -52,6 +52,12 @@
   <ItemGroup>
     <Compile Include="BaseExecutor.cs" />
     <Compile Include="BaseValidator.cs" />
+    <Compile Include="Members\AuthenticateMemberCommand.cs" />
+    <Compile Include="Members\Executors\AuthenticateMemberExecutor.cs" />
+    <Compile Include="Members\Executors\RegisterMemberExecutor.cs" />
+    <Compile Include="Members\RegisterMemberCommand.cs" />
+    <Compile Include="Members\Validators\AuthenticateMemberValidator.cs" />
+    <Compile Include="Members\Validators\RegisterMemberValidator.cs" />
     <Compile Include="Nuggets\CreateNuggetCommand.cs" />
     <Compile Include="Nuggets\Executors\CreateNuggetExecutor.cs" />
     <Compile Include="Nuggets\Validators\CreateNuggetValidator.cs" />
@@ -70,6 +76,7 @@
       <Name>TheNuggetList.Domain</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
