Fixed broken references

--- a/TheNuggetList/Web.config
+++ b/TheNuggetList/Web.config
@@ -30,8 +30,8 @@
 				<add namespace="System.Web.Mvc.Ajax" />
 				<add namespace="System.Web.Mvc.Html" />
 				<add namespace="System.Web.Routing" />
-				<add namespace="TheNuggetList.ViewModels"/>
-				<add namespace="TheNuggetList.Util"/>
+				<add namespace="TheNuggetList.Website.ViewModels"/>
+				<add namespace="TheNuggetList.Website.Util"/>
 			</namespaces>
 		</pages>
 	</system.web.webPages.razor>
